--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=sgamp
+# Configuração de conexão com banco de dados
+spring.datasource.url=jdbc:mysql://localhost:3306/sgamp
+spring.datasource.username=root
+spring.datasource.password=
+
+# Dialeto e driver do Hibernate
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Mostrar queries no console
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Configurações adicionais
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+server.port=9090
