--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=sgamp
+
+# Conexão com o banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/sgamp?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+# Configurações do Hibernate / JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Configuração do Hibernate/JPA adicionei agora pode nao valer
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+# Configuração de porta (opcional)
+server.port=8081
+
+# Diretório padrão para os templates HTML (Thymeleaf)
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+# pode nao funcionar 
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+# Configuração de upload de arquivos (se necessário)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
