--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,51 @@
-spring.application.name=sgamp
+spring.application.name=sm
 
-# Conexão com o banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/sgamp?useSSL=false&serverTimezone=UTC
+# Configurações do Servidor (Tomcat embutido)
+server.port=8082
+
+# Configurações do Banco de Dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/sm_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configurações do Hibernate / JPA
-spring.jpa.hibernate.ddl-auto=none
+# Configurações do JPA e Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# Configuração do Hibernate/JPA adicionei agora pode nao valer
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
-# Configuração de porta (opcional)
-server.port=8081
 
-# Diretório padrão para os templates HTML (Thymeleaf)
+# Configurações do Thymeleaf
+spring.thymeleaf.cache=false 
+# Desabilitar cache em desenvolvimento para ver mudanças no HTML sem reiniciar
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
-# pode nao funcionar 
 spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
 
-# Configuração de upload de arquivos (se necessário)
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+# Configurações de Upload de Arquivos (se necessário para dados de imagem, exames)
+# spring.servlet.multipart.max-file-size=10MB
+# spring.servlet.multipart.max-request-size=10MB
+
+# Spring Security (algumas configurações básicas, mais detalhes em WebSecurityConfig)
+# spring.security.user.name=user # Para Basic Auth, não usaremos se tiver form login
+# spring.security.user.password=password
+# spring.security.user.roles=USER
+
+# Para o Spring Boot DevTools LiveReload
+spring.devtools.livereload.enabled=true
+# Para que o DevTools reinicie ao mudar arquivos Thymeleaf
+spring.devtools.restart.additional-paths=src/main/resources/templates
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.engsoft.sm=DEBUG 
+# Nível de log para seus pacotes
+logging.level.org.hibernate.SQL=DEBUG 
+# Se spring.jpa.show-sql=true não for suficiente
+logging.level.org.hibernate.type.descriptor.sql=TRACE 
+# Para ver os parâmetros das queries
+
+# Ative logs detalhados do Spring Security
+logging.level.org.springframework.security=TRACE
